tests/baselines/reference/thisReferencedInFunctionInsideArrowFunction1(strict=true).errors.txt
thisReferencedInFunctionInsideArrowFunction1.ts(1,12): error TS7006: Parameter 'dummy' implicitly has an 'any' type.
thisReferencedInFunctionInsideArrowFunction1.ts(5,30): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== thisReferencedInFunctionInsideArrowFunction1.ts (2 errors) ====
    var foo = (dummy) => { };
               ~~~~~
!!! error TS7006: Parameter 'dummy' implicitly has an 'any' type.
    function test()
    {
        foo(() =>
            function () { return this; }
                                 ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        );
    }